--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -8,12 +8,15 @@
     "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
   },
   "CatalogBaseUrl": "",
-  "Logging": {
+  {
+   "UseOnlyInMemoryDatabase": true,   
+   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning",
       "Microsoft": "Warning",
       "System": "Warning"
+    }
     },
     "AllowedHosts": "*"
   }
