--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -5,7 +5,7 @@ on: [push, pull_request, workflow_dispatch]
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -23,5 +23,6 @@ jobs:
       with:
         # Artifact name
         name: eShopOnWeb
-        path: eShopOnWeb/eShopOnWeb/src/Infrastructure/bin/Release/net8.0/
+        path: src/Infrastructure/bin/Release/net8.0/
   
+
